🐛 Fix regressions in non-code-block text wrap and non-scrolling code block sizing

--- a/src/sections/presentation/styles.less
+++ b/src/sections/presentation/styles.less
@@ -34,7 +34,6 @@ p {
 // content height).
 code {
     font-size: 8px;
-    width: 100vw;
     color: #d4d4d4;
     background: #1e1e1e;
 }
@@ -44,6 +43,9 @@ code {
     align-items: center;
     column-gap: 2vh;
     grid-auto-flow: row;
+    code {
+        width: 100vw;
+    }
 }
 
 #text-grid {
